--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form action="#" class="form">
         <div class="input-box">
           <label>Full Name</label>
-          <input type="text" placeholder="Enter full name" required />
+          <input type="text" placeholder="Enter name" required />
         </div>
 
         <div class="input-box">
@@ -43,16 +43,11 @@
               <input type="radio" id="check-female" name="gender" />
               <label for="check-female">Female</label>
             </div>
-            <div class="gender">
-              <input type="radio" id="check-other" name="gender" />
-              <label for="check-other">prefer not to say</label>
-            </div>
           </div>
         </div>
         <div class="input-box address">
           <label>Address</label>
           <input type="text" placeholder="Enter street address" required />
-          <input type="text" placeholder="Enter street address line 2" required />
           <div class="column">
             <div class="select-box">
               <select>
@@ -66,8 +61,7 @@
             <input type="text" placeholder="Enter your city" required />
           </div>
           <div class="column">
-            <input type="text" placeholder="Enter your region" required />
-            <input type="number" placeholder="Enter postal code" required />
+            <input type="number" placeholder="Enter pin code" required />
           </div>
         </div>
         <button>Submit</button>
